--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
       
       <div>
-        <img  src="E:\BK 13-01-2024\Win 10 -2\15.Projects\4.BG_Calc\images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
+        <img  src="https://github.com/manicsegithub/bg_calc/blob/main/images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 4%;color: brown;">GRAHAM </h1>
       
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 1%;color: burlywood;">CALCULATOR.. </h1>  
