--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <hr style="margin-left: 5%;margin-right: 5%;">
 
       <div>
-        <img src="E:\BK 13-01-2024\Win 10 -2\15.Projects\4.BG_Calc\2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
+        <img src="https://github.com/manicsegithub/bg_calc/blob/main/2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
         <h2 style="text-align: center;"> ABOUT  <span style="font-weight: 700;color: brown;">BEN GRAHAM </span></h2>
         <h6 style="margin-left: 5%;margin-right: 3%; margin-top: 3%;font-weight: 700;">BENJAMIN GRAHAM, ALSO KNOWN AS THE FATHER OF VALUE INVESTING, 
           WAS KNOWN FOR PICKING CHEAP STOCKS. HE HAS WRITTEN TWO ALL-TIME BEST SELLING BOOKS- <span style="color: burlywood;">“THE INTELLIGENT INVESTOR” AND “SECURITY ANALYSIS”</span>.</h6>
