--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
       
       <div>
-        <img  src="https://github.com/manicsegithub/bg_calc/blob/main/images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
+        <img  src="https:\\github.com\manicsegithub\bg_calc\blob\main\images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 4%;color: brown;">GRAHAM </h1>
       
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 1%;color: burlywood;">CALCULATOR.. </h1>  
@@ -113,7 +113,7 @@
       <hr style="margin-left: 5%;margin-right: 5%;">
 
       <div>
-        <img src="https://github.com/manicsegithub/bg_calc/blob/main/2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
+        <img src="https:\\github.com\manicsegithub\bg_calc\blob\main\2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
         <h2 style="text-align: center;"> ABOUT  <span style="font-weight: 700;color: brown;">BEN GRAHAM </span></h2>
         <h6 style="margin-left: 5%;margin-right: 3%; margin-top: 3%;font-weight: 700;">BENJAMIN GRAHAM, ALSO KNOWN AS THE FATHER OF VALUE INVESTING, 
           WAS KNOWN FOR PICKING CHEAP STOCKS. HE HAS WRITTEN TWO ALL-TIME BEST SELLING BOOKS- <span style="color: burlywood;">“THE INTELLIGENT INVESTOR” AND “SECURITY ANALYSIS”</span>.</h6>
