--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
       
       <div>
-        <img  src="https:\\github.com\manicsegithub\bg_calc\blob\main\images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
+        <img  src="https://www.google.com/imgres?q=benjamin%20graham&imgurl=https%3A%2F%2Fwww.investopaper.com%2Fwp-content%2Fuploads%2F2020%2F04%2FBENJAMIN-GRAHAM.jpg&imgrefurl=https%3A%2F%2Fwww.investopaper.com%2Fnews%2Fbest-benjamin-graham-quotes%2F&docid=PLfIAfZ_wMrDAM&tbnid=edaayIL058SHLM&vet=12ahUKEwiE2dqs-cmGAxX8T2wGHRIEBDgQM3oECFMQAA..i&w=800&h=450&hcb=2&ved=2ahUKEwiE2dqs-cmGAxX8T2wGHRIEBDgQM3oECFMQAA" style="float:right;width:600px;height:400px;margin-right:3%"> 
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 4%;color: brown;">GRAHAM </h1>
       
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 1%;color: burlywood;">CALCULATOR.. </h1>  
