--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <hr style="margin-left: 5%;margin-right: 5%;">
 
       <div>
-        <img src="https:\\github.com\manicsegithub\bg_calc\blob\main\2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstockmarketconcepts.weebly.com%2Fwise-analysts-benjamin-graham.html&psig=AOvVaw0JMzXhpmrGvMPMHaTKsugJ&ust=1717865377479000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCMx_75yoYDFQAAAAAdAAAAABAE" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
         <h2 style="text-align: center;"> ABOUT  <span style="font-weight: 700;color: brown;">BEN GRAHAM </span></h2>
         <h6 style="margin-left: 5%;margin-right: 3%; margin-top: 3%;font-weight: 700;">BENJAMIN GRAHAM, ALSO KNOWN AS THE FATHER OF VALUE INVESTING, 
           WAS KNOWN FOR PICKING CHEAP STOCKS. HE HAS WRITTEN TWO ALL-TIME BEST SELLING BOOKS- <span style="color: burlywood;">“THE INTELLIGENT INVESTOR” AND “SECURITY ANALYSIS”</span>.</h6>
