--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </nav>
       
       <div>
-        <img  src="https://www.google.com/imgres?q=benjamin%20graham&imgurl=https%3A%2F%2Fwww.investopaper.com%2Fwp-content%2Fuploads%2F2020%2F04%2FBENJAMIN-GRAHAM.jpg&imgrefurl=https%3A%2F%2Fwww.investopaper.com%2Fnews%2Fbest-benjamin-graham-quotes%2F&docid=PLfIAfZ_wMrDAM&tbnid=edaayIL058SHLM&vet=12ahUKEwiE2dqs-cmGAxX8T2wGHRIEBDgQM3oECFMQAA..i&w=800&h=450&hcb=2&ved=2ahUKEwiE2dqs-cmGAxX8T2wGHRIEBDgQM3oECFMQAA" style="float:right;width:600px;height:400px;margin-right:3%"> 
+        <img  src="images.jpg" style="float:right;width:600px;height:400px;margin-right:3%"> 
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 4%;color: brown;">GRAHAM </h1>
       
       <h1 style="margin-left: 5%;margin-right: 5%; margin-top: 1%;color: burlywood;">CALCULATOR.. </h1>  
@@ -113,7 +113,7 @@
       <hr style="margin-left: 5%;margin-right: 5%;">
 
       <div>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstockmarketconcepts.weebly.com%2Fwise-analysts-benjamin-graham.html&psig=AOvVaw0JMzXhpmrGvMPMHaTKsugJ&ust=1717865377479000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCMx_75yoYDFQAAAAAdAAAAABAE" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
+        <img src="2.jpg" alt="" style="float:left;width:600px;height:400px;margin-right:3%;margin-left: 3%;">
         <h2 style="text-align: center;"> ABOUT  <span style="font-weight: 700;color: brown;">BEN GRAHAM </span></h2>
         <h6 style="margin-left: 5%;margin-right: 3%; margin-top: 3%;font-weight: 700;">BENJAMIN GRAHAM, ALSO KNOWN AS THE FATHER OF VALUE INVESTING, 
           WAS KNOWN FOR PICKING CHEAP STOCKS. HE HAS WRITTEN TWO ALL-TIME BEST SELLING BOOKS- <span style="color: burlywood;">“THE INTELLIGENT INVESTOR” AND “SECURITY ANALYSIS”</span>.</h6>
